# ProjectMitrichev

./: .gitignore  AccountController.cpp  AccountController.h  BankAccount.cpp  BankAccount.h  BankAccount_test.cpp  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
.github/workflows/: cpp-test-deploy.yml  docker-build.yml
app/: AccountController.cpp  FrontendController.h  main.cpp
app/.github/workflows/: docker-build.yml
app/frontend/: index.html
frontend/: index.html
